<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/afrocabala"
        android:textColor="@color/cardview_light_background"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="12dp"
        android:text="@string/btnText"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:theme="@style/Widget.AppCompat.Button.Colored"
        app:cornerRadius="8dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/noDate"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/txtTesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/ivHead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtNuca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/txtEsq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/ivHead"
            app:layout_constraintEnd_toStartOf="@id/ivHead"
            app:layout_constraintTop_toTopOf="@+id/ivHead" />

        <TextView
            android:id="@+id/txtDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/ivHead"
            app:layout_constraintStart_toEndOf="@id/ivHead"
            app:layout_constraintTop_toTopOf="@+id/ivHead" />

        <TextView
            android:id="@+id/txtPlacenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/ivHead"
            app:layout_constraintEnd_toEndOf="@id/ivHead"
            app:layout_constraintStart_toStartOf="@id/ivHead"
            app:layout_constraintTop_toTopOf="@+id/ivHead" />

        <ImageView
            android:id="@+id/ivHead"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/headtop3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:contentDescription="@string/headtop" />

        <TextView
            android:id="@+id/lblPrimordial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/primordial"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNuca" />

        <TextView
            android:id="@+id/lblPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/principal"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintEnd_toStartOf="@id/lblPrimordial"
            app:layout_constraintTop_toBottomOf="@+id/txtNuca" />

        <TextView
            android:id="@+id/lblObstaculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/obstaculo"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintStart_toEndOf="@id/lblPrimordial"
            app:layout_constraintTop_toBottomOf="@id/txtNuca" />

        <TextView
            android:id="@+id/txtPrimordial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/lblPrimordial"
            app:layout_constraintStart_toStartOf="@+id/lblPrimordial"
            app:layout_constraintTop_toBottomOf="@+id/lblPrimordial" />

        <TextView
            android:id="@+id/txtPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/lblPrincipal"
            app:layout_constraintStart_toStartOf="@+id/lblPrincipal"
            app:layout_constraintTop_toBottomOf="@+id/lblPrincipal" />

        <TextView
            android:id="@+id/txtObstaculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/lblObstaculo"
            app:layout_constraintStart_toStartOf="@+id/lblObstaculo"
            app:layout_constraintTop_toBottomOf="@+id/lblObstaculo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testa"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toTopOf="@+id/txtTesta"
            app:layout_constraintEnd_toEndOf="@+id/txtTesta"
            app:layout_constraintStart_toStartOf="@+id/txtTesta" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esquerda"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toTopOf="@+id/txtEsq"
            app:layout_constraintEnd_toEndOf="@+id/txtEsq"
            app:layout_constraintStart_toStartOf="@+id/txtEsq" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direita"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toTopOf="@+id/txtDir"
            app:layout_constraintEnd_toEndOf="@+id/txtDir"
            app:layout_constraintStart_toStartOf="@+id/txtDir" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placenta"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toTopOf="@+id/txtPlacenta"
            app:layout_constraintEnd_toEndOf="@+id/txtPlacenta"
            app:layout_constraintStart_toStartOf="@+id/txtPlacenta" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuca"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="@+id/ivHead"
            app:layout_constraintStart_toStartOf="@+id/ivHead"
            app:layout_constraintTop_toBottomOf="@+id/ivHead" />

        <TextView
            android:id="@+id/txtMais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mais"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/adView" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>